feat: implemented states deaths
