# src/controllers/states.ts
@@ -3,6 +3,8 @@ import axios from 'axios';
 import { Get, Queries, Route } from 'tsoa';
 import { INVALID_STATE_CODE } from '~/messages/errors';
 import {
+    FetchGermanyAllStatesDeathsHistoryResponse,
+    GermanyAllStateDeathsHistoryResponse,
     FetchGermanyAllStatesCasesHistoryResponse,
     FetchGermanyAllStatesResponse,
     FetchGermanyStateCasesHistoryResponse,
@@ -13,17 +15,27 @@ import {
     GermanyStateResponse,
     GermanyStates,
     GermanyStatesQueryParams,
+    FetchGermanyStateDeathsHistoryResponse,
+    GermanyStateDeathsHistoryResponse,
+    GermanyStatesCasesQueryParams,
+    GermanyStatesDeathsQueryParams,
 } from '~/interfaces/states.interface';
+import { handleCasesSort, handleDeathsSort } from '~/utils/sort';
+import { CasesOrder, CasesSort } from '~/interfaces/cases.interface';
+import { DeathsOrder, DeathsSort } from '~/interfaces/deaths.interface';
 
 const _rkiApiUrl: string = config.get('RKI.API.LOCAL.URL');
 const _statesEndPoint: string = config.get('RKI.API.ENDPOINTS.STATES');
 const _statesApiUrl = `${_rkiApiUrl}${_statesEndPoint}`;
 const _statesCasesHistoryApiUrl: string = _statesApiUrl + '/history/cases';
 const _stateCasesHistoryApiUrl: string = _statesApiUrl + '/{{state}}/history/cases';
+const _statesDeathsHistoryApiUrl: string = _statesApiUrl + '/history/deaths';
+const _stateDeathsHistoryApiUrl: string = _statesApiUrl + '/{{state}}/history/deaths';
 
 async function fetchAllStates(): Promise<FetchGermanyAllStatesResponse> {
     const { data } = await axios.get<GermanyAllStatesResponse>(_statesApiUrl);
     const { data: statesData } = data;
+
     return {
         data: statesData,
     };
@@ -37,26 +49,85 @@ async function fetchState(state: GermanyStates): Promise<FetchGermanyStateRespon
     };
 }
 
-async function fetchAllStatesCasesHistory(): Promise<FetchGermanyAllStatesCasesHistoryResponse> {
+async function fetchAllStatesCasesHistory({
+    sort,
+    order,
+}: {
+    sort?: CasesSort;
+    order?: CasesOrder;
+}): Promise<FetchGermanyAllStatesCasesHistoryResponse> {
     const { data } =
         await axios.get<GermanyAllStateCasesHistoryResponse>(_statesCasesHistoryApiUrl);
     const { data: statesData } = data;
+    Object.values(statesData).forEach((entry) => {
+        entry.history.sort(handleCasesSort({ sort, order }));
+    });
     return {
         data: statesData,
     };
 }
 
-async function fetchStateCasesHistory(
-    state: GermanyStates,
-): Promise<FetchGermanyStateCasesHistoryResponse> {
+async function fetchStateCasesHistory({
+    state,
+    sort,
+    order,
+}: {
+    state: GermanyStates;
+    sort?: CasesSort;
+    order?: CasesOrder;
+}): Promise<FetchGermanyStateCasesHistoryResponse> {
     const { data } = await axios.get<GermanyStateCasesHistoryResponse>(
         _stateCasesHistoryApiUrl.replace('{{state}}', state),
     );
     const { data: statesData } = data;
+    Object.values(statesData).forEach((entry) => {
+        entry.history.sort(handleCasesSort({ sort, order }));
+    });
     return {
         data: statesData,
     };
 }
+
+async function fetchAllStatesDeathsHistory({
+    sort,
+    order,
+}: {
+    sort?: DeathsSort;
+    order?: DeathsOrder;
+}): Promise<FetchGermanyAllStatesDeathsHistoryResponse> {
+    const { data } = await axios.get<GermanyAllStateDeathsHistoryResponse>(
+        _statesDeathsHistoryApiUrl,
+    );
+    const { data: statesData } = data;
+    Object.values(statesData).forEach((entry) => {
+        entry.history.sort(handleDeathsSort({ sort, order }));
+    });
+    return {
+        data: statesData,
+    };
+}
+
+async function fetchStateDeathsHistory({
+    state,
+    sort,
+    order,
+}: {
+    state: GermanyStates;
+    sort?: DeathsSort;
+    order?: DeathsOrder;
+}): Promise<FetchGermanyStateDeathsHistoryResponse> {
+    const { data } = await axios.get<GermanyStateDeathsHistoryResponse>(
+        _stateDeathsHistoryApiUrl.replace('{{state}}', state),
+    );
+    const { data: statesData } = data;
+    Object.values(statesData).forEach((entry) => {
+        entry.history.sort(handleDeathsSort({ sort, order }));
+    });
+    return {
+        data: statesData,
+    };
+}
+
 async function isValidState(state?: GermanyStates): Promise<boolean> {
     return state?.length ? !Object.values(GermanyStates).includes(state as GermanyStates) : false;
 }
@@ -81,18 +152,37 @@ export default class GermanyStatesController {
 
     @Get('/cases')
     public async fetchStatesCasesHistory(
-        @Queries() queryParams: GermanyStatesQueryParams,
+        @Queries() queryParams: GermanyStatesCasesQueryParams,
     ): Promise<FetchGermanyStateCasesHistoryResponse | FetchGermanyAllStatesCasesHistoryResponse> {
-        const { state } = queryParams;
+        const { state, sort, order } = queryParams;
 
         if (!isValidState(state)) {
             throw new Error(INVALID_STATE_CODE);
         }
 
         if (!state) {
-            return fetchAllStatesCasesHistory();
+            return fetchAllStatesCasesHistory({ sort, order });
         }
 
-        return fetchStateCasesHistory(state);
+        return fetchStateCasesHistory({ state, sort, order });
+    }
+
+    @Get('/deaths')
+    public async fetchStatesDeathsHistory(
+        @Queries() queryParams: GermanyStatesDeathsQueryParams,
+    ): Promise<
+        FetchGermanyStateDeathsHistoryResponse | FetchGermanyAllStatesDeathsHistoryResponse
+    > {
+        const { state, sort, order } = queryParams;
+
+        if (!isValidState(state)) {
+            throw new Error(INVALID_STATE_CODE);
+        }
+
+        if (!state) {
+            return fetchAllStatesDeathsHistory({ sort, order });
+        }
+
+        return fetchStateDeathsHistory({ state, sort, order });
     }
 }
